--- a/app/scripts/modules/core/src/entityTag/notifications/notifications.less
+++ b/app/scripts/modules/core/src/entityTag/notifications/notifications.less
@@ -66,13 +66,12 @@
 }
 
 .entity-notifications {
-  display: inline-block;
-  position: relative;
+  display: flex;
 
   .tag-marker {
     display: inline-block;
     margin-left: 5px;
-    font-size: 14px;
+    font-size: 15px;
 
     &.inverse {
       .fa {
